--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 	<div class="container">
 		<form id="formTareas">
 			<div class="mb-3">
-			  <label for="nombreTarea" class="form-label">Nombre tarea</label>
+			  <label for="nombreTarea" class="form-label">Tarea</label>
 			  <input type="text" class="form-control" id="nombreTarea" name="nombre"> 
 			</div>
 			<div class="mb-3">
-				<label for="descripcionTarea" class="form-label">Descripción tarea</label>
+				<label for="descripcionTarea" class="form-label">Descripción de la tarea</label>
 				<input type="text" class="form-control" id="descripcionTarea" name="descripcion">
 			</div>
 			<button type="submit" class="btn btn-primary">Crear tarea</button>
